--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,11 @@
 Hector 2.0.0
 ============
-* Incorporated 1-D diffusive ocean heat model (DOECLIM)
-* deleted the old temperature component
-* bugfix: double counting halocarbon radiative forcing
-* bugfix: re-enabled CO2 concentration constraint
-* initalized FSO2 first before FSO2i and FSO2d
-* getComponentName now public
-* h_exeptions are now a subclass of std::exception
-* component loggers are now optional
-* double values accepted in setData
-* renamed anthro emissions to ffi emisisons (fossil fuel industrial)
+* Incorporated 1-D diffusive ocean heat model as new temperature component (DOECLIM) (PR #206)
+* Bugfix: double counting halocarbon radiative forcing (PR #201)
+* Bugfix: re-enabled CO2 concentration constraint (PR #163)  
+* Various changes to internals to support calling Hector from external code like pyhector
+* Component loggers are now optional (PR #218)
+* Renamed anthro emissions to ffi emisisons (fossil fuel industrial) (PR #116)
 
 
 Hector 1.1.2
