--- a/vignettes/manual/InputFiles.Rmd
+++ b/vignettes/manual/InputFiles.Rmd
@@ -34,16 +34,20 @@ In this case, the `input/emissions/RCP45_emissions.csv` file is parsed and the d
 
 # List of model parameters
 
-*Italicized* properties are optional.
+Properties with asterisks (`*`) are optional.
 
-Section (component)     | Property     | Units   | Notes
-------------------------|--------------|---------|-----------
-**core**                | run_name     | Text    | 
-                        | startDate    | Year    |
-                        | endDate      | Year    |
-                        | *do_spinup*  | 0/1     | Defaults to 1 (TRUE)
-                        | *max_spinup* | Numeric | Defaults to 1000
-**carbon-cycle-solver** | eps_abs      | Numeric | Solution tolerance, Pg C; see [GSL documentation](https://www.gnu.org/software/gsl/manual/html_node/Ordinary-Differential-Equations.html#Ordinary-Differential-Equations)
-                        | eps_rel      | Numeric | Solution tolerance; see [GSL documentation](https://www.gnu.org/software/gsl/manual/html_node/Ordinary-Differential-Equations.html#Ordinary-Differential-Equations)
-                        | dt           | Numeric | Default timestep; see GSL documentation
-                        | eps_spinup   | Numeric | Spinup tolerance (drift), Pg C
+
+| Section (component)      | Property         | Units     | Notes                                                      |
+| ------------------------ | ---------------- | --------- | -----------                                                |
+| **core**                 | `run_name`       | Text      |                                                            |
+|                          | `startDate`      | Year      |                                                            |
+|                          | `endDate`        | Year      |                                                            |
+|                          | `do_spinup*`     | 0/1       | Defaults to 1 (TRUE)                                       |
+|                          | `max_spinup*`    | Numeric   | Defaults to 1000                                           |
+| **carbon-cycle-solver**  | `eps_abs`        | Numeric   | Solution tolerance, Pg C; see [GSL documentation][gsl-ode] |
+|                          | `eps_rel`        | Numeric   | Solution tolerance; see [GSL documentation][gsl-ode]       |
+|                          | `dt`             | Numeric   | Default timestep; see GSL documentation                    |
+|                          | `eps_spinup`     | Numeric   | Spinup tolerance (drift), Pg C                             |
+
+[gsl-ode]: https://www.gnu.org/software/gsl/manual/html_node/Ordinary-Differential-Equations.html#Ordinary-Differential-Equations
+
