--- a/vignettes/manual/SimpleNBox.Rmd
+++ b/vignettes/manual/SimpleNBox.Rmd
@@ -10,7 +10,8 @@ Contents:
 # Science {#simplenbox-science}
 
 Hector's land C sink is divided into three pools: vegetation ($C_v$), detritus ($C_d$), and soil ($C_s$).
-These sinks be global (default), or can be divided into $n$ "biomes" with unique initial pool sizes and parameters.
+These sinks are global by default, but they can be divided into $n$ "biomes" with unique parameters and initial pool sizes.
+
 The total C flux from atmosphere to land at time $t$ ($F_{L}(t)$) is the net of C sequestration by photosynthesis (net primary productivity, $NPP_i(t)$) and C release by heterotrophic respiration ($RH(t)$), summed across each biome $i$:
 
 $$ F_{L}(t) = \sum_{i=1}^{n} \left( NPP_i(t) - RH_i(t) \right) $$
@@ -31,12 +32,12 @@ Note that the fractions of soil and detritus C available to respiration are hard
 In each biome at each time step, the vegetation pools change as follows (biome, $i$ and time, $t$ subscripts omitted for clarity):
 C gain from NPP is distributed to vegetation, detritus, and soil according to fractionation parameters $f_{nv}$, $f_{nd}$, and $f_{ns}$, respectively.
 Similarly, each pool bears a fraction of the total C loss from land-use change ($F_{LC}$), again according to fractions $f_{lv}$, $f_{ld}$, and $f_{ls}$.
-The detritus and soil pools also lose C via heterotrophic respiration ($RH_s$ and $RH_d$, respectively).
+The detritus and soil pools also lose C via heterotrophic respiration ($RH_d$ and $RH_s$, respectively).
 Finally, a fixed fraction of vegetation C is transferred to detritus as litterfall ($f_{vd}$), and a fraction of both vegetation ($f_{vs}$) and detritus ($f_{ds}$) are transferred to soil via decomposition.
 
-$$ \frac{dC_v}{dt} = NPP f_{nv} - C_v (f_{vd} + f_{vs}) - F_{LC} f_{lv} $$
-$$ \frac{dC_s}{dt} = NPP f_{nd} + C_v f_{vd} - C_d f_{ds} - RH_d - F_{LC} f_{ld} $$
-$$ \frac{dC_d}{dt} = NPP f_{ns} + C_v f_{vs} + C_d f_{ds} - RH_s - F_{LC} f_{ls} $$
+$$ \frac{dC_v}{dt} = NPP\, f_{nv} - C_v (f_{vd} + f_{vs}) - F_{LC} f_{lv} $$
+$$ \frac{dC_d}{dt} = NPP\, f_{nd} + C_v f_{vd} - C_d f_{ds} - RH_d - F_{LC} f_{ld} $$
+$$ \frac{dC_s}{dt} = NPP\, f_{ns} + C_v f_{vs} - C_d f_{ds} - RH_s - F_{LC} f_{ls} $$
 
 The entire terrestrial C cycle is summarized in the following diagram:
 
